src/objects/Validation_Rule_Handler__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls what validation rules users are able to bypass.</description>
    <fields>
        <fullName>Account__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>true</defaultValue>
        <description>On/Off switch for Account Validation Rules. JIRA: SFDCSPT-506</description>
        <inlineHelpText>On/Off switch for Account Validation Rules.</inlineHelpText>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>true</defaultValue>
        <description>On/Off switch for Contact Validation Rules. JIRA: SFDCSPT-506</description>
        <inlineHelpText>On/Off switch for Contact Validation Rules.</inlineHelpText>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>true</defaultValue>
        <description>On/Off switch for Lead Validation Rules. JIRA: SFDCSPT-506</description>
        <inlineHelpText>On/Off switch for Lead Validation Rules.</inlineHelpText>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityAnalyticsBypass__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>true</defaultValue>
        <description>Used in various validation rules as a mechanism to allow the Analytics team members to bypass restrictions.</description>
        <inlineHelpText>Used in various validation rules as a mechanism to allow the Analytics team members to bypass restrictions.</inlineHelpText>
        <label>Opportunity: Analytics Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityCustomerSuccessBypass__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>true</defaultValue>
        <description>Used in various validation rules as a mechanism to allow the Customer Success team members to bypass restrictions.</description>
        <inlineHelpText>Used in various validation rules as a mechanism to allow the Customer Success team members to bypass restrictions.</inlineHelpText>
        <label>Opportunity: Customer Success Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityProduct__c</fullName>
        <defaultValue>true</defaultValue>
        <description>On/Off switch for Opportunity Product Validation Rules. JIRA: SFDCSPT-506</description>
        <inlineHelpText>On/Off switch for Opportunity Product Validation Rules.</inlineHelpText>
        <label>Opportunity Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityRenewalsBypass__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>true</defaultValue>
        <description>Used in various validation rules as a mechanism to allow the Renewals team members to bypass restrictions.</description>
        <inlineHelpText>Used in various validation rules as a mechanism to allow the Renewals team members to bypass restrictions.</inlineHelpText>
        <label>Opportunity: Renewals Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunitySystemAdminBypass__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>true</defaultValue>
        <description>Used in various validation rules as a mechanism to allow System Administrators bypass restrictions.</description>
        <inlineHelpText>Used in various validation rules as a mechanism to allow System Administrators bypass restrictions.</inlineHelpText>
        <label>Opportunity: System Admin Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>true</defaultValue>
        <description>On/Off switch for Opportunity Validation Rules. JIRA: SFDCSPT-506</description>
        <inlineHelpText>On/Off switch for Opportunity Validation Rules.</inlineHelpText>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <label>Validation Rule Handler</label>
</CustomObject>